--- a/package.json
+++ b/package.json
@@ -9,17 +9,16 @@
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "type": "module",
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "concurrently": "^8.2.2",
-    "nodemon": "^3.0.3"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "concurrently": "^8.2.2"
   }
 }
